# python-dev-tooling

./: Makefile  README.md  ci.yml  devcontainer.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: index.html  python-package-managers-map.html  python-pm-quiz-theory.html  python-pm-quiz.html  ruff-quiz.html
src/: example.py  messy.py
tests/: test_example.py
